Fix spacing for Movie cards so the details page is not affected

--- a/src/Nav.css
+++ b/src/Nav.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: flex-start;
   background-color: #180047;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
 }
 
 .logo {
